<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_field_name"
            android:text="@string/field_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <EditText
        android:id="@+id/text_field_name"
        android:layout_width="268dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_item_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contract_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/contract_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_label_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_field_type"
            android:text="@string/field_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <EditText
        android:id="@+id/text_field_type"
        android:layout_width="268dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_item_margin"
        />

    <Button
        android:id="@+id/add_field_dialog_finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_finished" />

</LinearLayout>